# ODL

./: .gitignore  CMakeLists.txt  LICENSE  ODLConfig.cmake  ODLConfigVersion.cmake.in  ODLogging.cpp  ODLogging.h.in  ODLogging.inc.c  ODLogging.m  README.md  odlCommonSettings.cmake  odlSupport.cpp  odlSupport.inc.c
iOS/: CMakeLists.txt
non-iOS/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  install_manifest_headers.txt  install_manifest_libraries.txt
non-iOS/CPack/: CMakeLists.txt  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
non-iOS/_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
odl.xcodeproj/: project.pbxproj
odl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
odl.xcodeproj/xcuserdata/njaffe.xcuserdatad/xcschemes/: odl-All.xcscheme  odl.xcscheme  odlC.xcscheme  odlCi.xcscheme  odlOC.xcscheme  odlOCi.xcscheme
src/: CppVersions.h  odlConfig.h.in  odlDisable.h  odlEnable.h  odlFunctions.h  odlInclude.h  odlSupport.inc.c  odlSupport.m
